[package]
name    = "rp_pico_oled_sierpinski"
version = "0.1.1"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.5"

defmt       = "1.0.1"
defmt-rtt   = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.4.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }

embedded-hal-bus   = { version = "0.3.0", features = ["async"] }
embedded-hal-async = "1.0.0"
# embedded-graphics  = "0.8.1"
ssd1306           = { version = "0.10.0", features = ["async"] }
display-interface = "0.5.0"
rand              = { version = "0.9.1", features = ["small_rng"], default-features = false }


[profile.release]
lto           = true
opt-level     = "s"
incremental   = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

[profile.dev]
lto = true
